fix up spacing for month view icon

--- a/src/resources/postcss/views/month/_calendar-event.pcss
+++ b/src/resources/postcss/views/month/_calendar-event.pcss
@@ -76,11 +76,11 @@
 	}
 
 	.tribe-events-calendar-month__calendar-event-datetime-featured {
-		margin-right: 3px;
+		margin-right: var(--spacer-0);
 	}
 
 	.tribe-events-calendar-month__calendar-event-datetime-recurring {
-		margin-left: 3px;
+		margin-left: var(--spacer-0);
 	}
 
 	/* .tribe-events-calendar-month__calendar-event-title {} */
