--- a/src/resources/postcss/views/month/_mobile-events.pcss
+++ b/src/resources/postcss/views/month/_mobile-events.pcss
@@ -63,11 +63,11 @@
 	}
 
 	.tribe-events-calendar-month-mobile-events__mobile-event-datetime-featured {
-		margin-right: 3px;
+		margin-right: var(--spacer-0);
 	}
 
 	.tribe-events-calendar-month-mobile-events__mobile-event-datetime-recurring {
-		margin-left: 3px;
+		margin-left: var(--spacer-0);
 	}
 
 	.tribe-events-calendar-month-mobile-events__mobile-event-cta {
